# vekna

./: .copier-answers.yml  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  mise.toml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: architecture.md
src/vekna/gates/cli/click/: command.py
src/vekna/inits/: cli.py
src/vekna/links/: socket_server.py  tmux.py
src/vekna/mills/: bus.py  handlers.py  notify.py  server.py
src/vekna/pacts/: bus.py  notify.py  socket.py  tmux.py
src/vekna/specs/: __init__.py  attention.py  constants.py  session.py
tests/integration/: test_command.py  test_notify_end_to_end.py  test_notify_flow.py
tests/unit/: test_cli.py  test_constants.py  test_event_bus.py  test_handlers.py  test_notify_client_mill.py  test_server_mill.py  test_socket_client.py  test_socket_server.py  test_tmux_link.py
